welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: Boolean does not take parameters
  while (!positionFinale()) 
                        ^SnakeBuggle:7: error: Boolean does not take parameters
    positionFinale()
                  ^