welcome.lessons.welcome.traversal.Snake.scala.code
override def run() 
{
  var positionFinale = false
  while (!positionFinale()) 
  {
    avanceCommeSerpent()
    positionFinale()
  }
}

def avanceCommeSerpent() 
{
  if (!estFaceMur()) {
    avance()
  } else 
  {
    if (getDirection()==Direction.EAST) 
    {
      gauche()
      avance()
      gauche()
    } else 
    {
      droite()
      avance()
      droite()
    }
  }
}

def positionFinale() : Boolean = 
{
  if (estFaceMur()) 
  {
    if (getDirection()==Direction.EAST) 
    {
      gauche()
      if (estFaceMur()) 
      {
        return true
      } else 
      {
        return false
      }
    } else 
    {
      droite()
      if (estFaceMur()) 
      {
        return true
      } else 
      {
        return false
      }
    }
  } else 
  {
    return false
  }
}